--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1>Le FANTABULOUS AI Cookbook!!!</h1>
         <h2>Recipes</h2>
         <ul>
             <li><a href="./grilledcheese.html">GRILLED CHEESE!</a></li>
+            <li><a href="./grilledcheese.html">GRILLED CHEESE!</a></li>
+            <li><a href="./grilledcheese.html">GRILLED CHEESE!</a></li>
+        </ul>
+        <h2>Reflections</h2>
+        <ul>
+            <li><a href="./reflectionMalcolm.html">Malcolm</a></li>
+            <li><a href="./reflectionCamren.html">Camren</a></li>
         </ul>
     </body>
 </html>
