--- a/grilledcheese.html
+++ b/grilledcheese.html
@@ -6,6 +6,36 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body class="cheeseStyles">
-        
+        <h1>HOW TO GRILL A CHEESE!</h1>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 slices of bread (white, sourdough, or your favorite)</li>
+            <li>2 slices of cheese (cheddar, American, or your choice)</li>
+            <li>1-2 tablespoons butter (softened)</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>
+                <h3>Butter the bread:</h3>
+                <p>Spread butter evenly on one side of each slice of bread.</p>
+            </li>
+            <li>
+                <h3>Assemble the sandwich:</h3>
+                <p>Place one slice of bread butter-side down in a skillet. Add the cheese slices on top, then cover with the second slice of bread (butter-side up).</p>
+            </li>
+            <li>
+                <h3>Cook the first side:</h3>
+                <p>Heat a skillet or frying pan over medium heat. Cook the sandwich for about 2-3 minutes, or until the bottom is golden brown.</p>
+            </li>
+            <li>
+                <h3>Flip and cook the other side:</h3>
+                <p>Carefully flip the sandwich with a spatula. Cook for another 2-3 minutes, until the second side is golden and the cheese is melted.</p>
+            </li>
+            <li>
+                <h3>Serve:</h3>
+                <p>Remove from heat, let it cool for a minute, then slice in half and enjoy! 🥪</p>
+            </li>
+        </ol>
+        <p>Wanna see the dumb chat with Gipitee? Click <a href="https://chatgpt.com/share/68efe916-1ec4-8005-8584-196dc5819bec" target="_blank">HERE!</a></p>
     </body>
 </html>
