--- a/grilledcheese.html
+++ b/grilledcheese.html
@@ -3,11 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>AI Cookbook</title>
+        <link rel="stylesheet" href="stylesGrilled.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body class="cheeseStyles">
         <h1>HOW TO GRILL A CHEESE!</h1>
         <h2>Ingredients</h2>
+        <img src="https://tse2.mm.bing.net/th/id/OIP.vwEKDo_dOL2a1gFELWmHhwHaF1?cb=12ucfimg=1&rs=1&pid=ImgDetMain&o=7&rm=3" align="right" width="9%">
+        <img src="https://i5.walmartimages.com/seo/Land-O-Lakes-Butter-with-Canola-Oil-Spreadable-15-oz-Tub_0e3ec75e-b3ed-41ae-bf5a-0af23c0b6fdf.77f94daa51b5a3170246d33e130cc798.jpeg?odnHeight=573&odnWidth=573&odnBg=FFFFFF"
+        align="right" width="9%">
+        <img src="https://res.cloudinary.com/kraft-heinz-whats-cooking-ca/f_auto,c_limit,w_1920,q_auto/f_auto/q_auto/dxp-images/brands/Brands%20Homepage/Kraftsingles/singles-original-slices-en-CA.png"
+        align="right" width="9%">
         <ul>
             <li>2 slices of bread (white, sourdough, or your favorite)</li>
             <li>2 slices of cheese (cheddar, American, or your choice)</li>
@@ -18,6 +24,8 @@
             <li>
                 <h3>Butter the bread:</h3>
                 <p>Spread butter evenly on one side of each slice of bread.</p>
+                <img src="https://www.tastingtable.com/img/gallery/why-you-should-start-buttering-toast-before-putting-it-in-the-oven/buttering-your-bread-before-toasting-it-cooks-butter-into-the-bread-1676209460.jpg"
+                align="right" width="20%">
             </li>
             <li>
                 <h3>Assemble the sandwich:</h3>
@@ -26,6 +34,7 @@
             <li>
                 <h3>Cook the first side:</h3>
                 <p>Heat a skillet or frying pan over medium heat. Cook the sandwich for about 2-3 minutes, or until the bottom is golden brown.</p>
+                <img src="https://media1.tenor.com/m/1aE43Gq33-AAAAAd/grilled-cheese-cheese.gif" align="right" width="20%">
             </li>
             <li>
                 <h3>Flip and cook the other side:</h3>
